--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,7 @@
 <ol class="post-list">
-    {{#each posts as |post|}}
+    {{#each blogs as |blog|}}
   <li>
-    <article class="post">
-      <div class="title">
-        <a href="{{post.post_url}}" target="_blank">{{post.title}}</a>
-        <span>({{post.post_url}})</span>
-      </div>
-      <div class="meta">
-        {{post.vote_count}} point(s) by {{post.user.username}} on
-        {{post.created_at}}
-        |
-        <a href="/post/{{id}}">{{post.comments.length}} comment(s)</a>
-      </div>
-    </article>
+    {{> blog-info blog}}
   </li>
   {{/each}}
 </ol>
