--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -136,15 +136,6 @@ main {
   margin: -1.5% 0 2% 0;
 }
 
-.upvote-btn {
-  background-color: #197d0f;
-  transition: background-color 0.1s;
-}
-
-.upvote-btn:hover {
-  background-color: #1f9c13;
-}
-
 .comment-form {
   margin-bottom: 5%;
 }
@@ -164,11 +155,15 @@ main {
   opacity: 0.6;
 }
 
-.new-post-form input {
+.new-blog-form input {
   width: 300px;
 }
 
-.edit-post-form {
+/* .new-blog-form #blog-text {
+  height: 200px;
+} */
+
+.edit-blog-form {
   margin-bottom: 5%;
 }
 
@@ -178,4 +173,8 @@ footer {
   justify-content: center;
   padding: 1%;
   font-size: 110%;
+}
+
+.blog-text {
+  height: 20px;
 }
