--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,11 @@
 <body>
   <div>
     <header>
-      <div>
+      <div class="logo">
         <h1>
           <a href="/">DigiTech</a>
         </h1>
-        <h6>(short for digital tech)</h6>
+        <h6>(short for digital technology)</h6>
       </div>
          <nav>
         {{#if loggedIn}}
