--- a/views/partials/blog-info.handlebars
+++ b/views/partials/blog-info.handlebars
@@ -1,11 +1,14 @@
     <article class="blog">
       <div>
-        <a>{{title}}</a>
+        <a href="/blogs/{{id}}">{{title}}</a>
       </div>
       <div class="meta">
         By {{user.username}} on
         {{format_date createdAt}}
         |
-        <a href="/blogs/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+        <a class="commentInfo" href="/blogs/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+      </div>
+      <div class="blogText">
+        {{blog_text}}
       </div>
     </article>
