--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,7 @@ html {
   margin: 0;
   font-family: sans-serif;
   color: #333;
+  background-color: #f7f4e3;
 }
 
 a {
@@ -23,7 +24,7 @@ a:hover {
 }
 
 button {
-  background-color: #225ca3;
+  background-color: #333;
   border: 0;
   padding: 1%;
   color: white;
@@ -198,4 +199,26 @@ footer {
   border: solid #333 1px;
   border-radius: 5px;
   padding: 5px;
+}
+
+.loginBox {
+  margin: 30px;
+}
+
+.loginBox h3 {
+  border-bottom: solid 1px #333;
+  /* border-bottom: solid 5px; */
+  /* width: 80%; */
+  /* display: flex;
+  justify-content: center; */
+}
+
+.loginContainer {
+  border: 1px solid #333;
+  border-radius: 5px;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
 }
