--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,9 @@ html {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
+  font-family: "Andale Mono", monospace;
   color: #333;
   background-color: #f7f4e3;
 }
@@ -108,6 +110,10 @@ main {
   padding: 2% 4%;
 }
 
+.navBtn {
+  margin-left: 16px;
+}
+
 .btn-no-style {
   background: none;
   border: none;
@@ -119,6 +125,7 @@ main {
   font-weight: bold;
   transition: color 0.1s;
   margin-left: 16px;
+  font-family: "Andale Mono", monospace;
 }
 
 .btn-no-style:hover {
