--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,44 +1,43 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DigiTech</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DigiTech</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
 
-<body>
-  <div>
-    <header>
-      <div class="logo">
-        <h1>
-          <a href="/">DigiTech</a>
-        </h1>
-        <h6>(short for digital technology)</h6>
-      </div>
-         <nav>
-        {{#if loggedIn}}
-        <a href="/">home</a>
-        <a href="/dashboard">dashboard</a>
-        <button id="logout" class="btn-no-style">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
-    </header>
-    <main>
-      {{{ body }}}
-    </main>
-    <footer>
-      Thanks for supporting our online family here to support you!
-    </footer>
-  </div>
+  <body>
+    <div>
+      <header>
+        <div class="logo">
+          <h1>
+            <a href="/">DigiTech</a>
+          </h1>
+          <h6>(short for digital technology)</h6>
+        </div>
+        <nav>
+          {{#if loggedIn}}
+            <a class="navBtn" href="/">home</a>
+            <a class="navBtn" href="/dashboard">dashboard</a>
+            <button id="logout" class="btn-no-style">logout</button>
+          {{else}}
+            <a href="/login">login</a>
+          {{/if}}
+        </nav>
+      </header>
+      <main>
+        {{{body}}}
+      </main>
+      <footer>
+        Thanks for supporting our online family here to support you!
+      </footer>
+    </div>
 
-  {{#if loggedIn}}
-<script src="/javascript/logout.js"></script>
-{{/if}}
+    {{#if loggedIn}}
+      <script src="/javascript/logout.js"></script>
+    {{/if}}
 
-</body>
+  </body>
 
 </html>
