updated readme and title

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,9 +12,9 @@
       <header>
         <div class="logo">
           <h1>
-            <a href="/">DigiTech</a>
+            <a href="/">DigiBlog</a>
           </h1>
-          <h6>(short for digital technology)</h6>
+          <h6>(short for digital weblog)</h6>
         </div>
         <nav>
           {{#if loggedIn}}
